--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,12 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<<<<<<< HEAD
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
-=======
 
-  
->>>>>>> f3df246876bf2f9dd6a86251e51d43c4ef20434a
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
