correccion error Modal(Generico) y creacion containers (loopback component storage) UploadFiles

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,18 +1,31 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>FrontendHomeColombia</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
+
 <body>
+  <!-- Modal Structure -->
+  <div id="modalmsj" class="modal">
+    <div class="modal-content">
+      <h4>HomeColombia Message</h4>
+      <p id="pmsj"></p>
+    </div>
+    <div class="modal-footer">
+      <a class="modal-close waves-effect waves-green btn-flat">Close</a>
+    </div>
+  </div>
   <app-root></app-root>
 </body>
+
 </html>
